# iodata

./: .appveyor.yml  .cardboardlint.yml  .codecov.yml  .deepsource.toml  .editorconfig  .gitignore  .pre-commit-config.yaml  .pycodestylerc  .pydocstylerc  .pylintrc  .readthedocs.yml  .roberto.yaml  .travis.yml  .yamllint  CONTRIBUTING.rst  HEADER  MANIFEST.in  README.md  README.rst  __init__.py  chk.py  cif.py  cleanfiles.sh  common.py  cp2k.py  cube.py  dump_fci.py  environment.yml  gaussian.py  integrals_io.py  internal.py  iodata.py  lockedh5.py  molden.py  molecule.py  molekel.py  molpro.py  overlap.py  overlap_accel.pxd  overlap_helper.py  (+11 more)
.github/: requirements-old.txt
.github/workflows/: ci.yml  pytest.yaml  pytest.yml  release.yaml  sphinx.yaml
doc/: .readthedocs.yaml  API.rst  Makefile  basis.rst  changelog.rst  conf.py  contributing.rst  dev_building.rst  developers.rst  formats.rst  gen_docs.sh  gen_formats.py  gen_formats_tab.py  gen_inputs.py  getting_started.rst  index.rst  install.rst  requirements.txt  supported_format.rst
doc/_static/css/: override.css
docs/: Makefile  acknowledgments.rst  changelog.rst  code_of_conduct.rst  conf.py  contributing.rst  gen_formats.py  gen_formats_tab.py  gen_inputs.py  getting_started.rst  how_to_cite.rst  index.rst  install.rst  make.bat  requirements.txt
docs/_static/css/: table.css
docs/example_scripts/: .gitignore  convert_fchk_molden.py  convert_fchk_xyz_traj.py  convert_fchk_xyz_traj_mod1.py  convert_fchk_xyz_traj_mod2.py  data_representation.py  load_trajectory.py  load_water.py  load_water_foo.py  my_template.com  peroxide_opt.fchk  test_scripts.py  trajectory.xyz  water.fchk  write_gaussian_com.py  write_gaussian_com_custom.py  write_gaussian_com_file.py  write_gaussian_com_lot.py  write_gaussian_com_template.py
docs/getting_started/: dumping.rst  index.rst  inputs.rst  loading.rst  representation.rst  script.rst  units.rst
iodata/: __init__.py  __main__.py  api.py  attrutils.py  basis.py  chgcar.py  convert.py  cp2k.py  cube.py  docstrings.py  fchk.py  gaussian.py  iodata.py  locpot.py  log.py  molden.py  molekel.py  molpro.py  orbitals.py  orca.py  overlap.py  overlap_accel.pxd  overlap_accel.pyx  overlap_cartpure.py  overlap_helper.py  overlap_py.py  overlap_python.py  periodic.py  poscar.py  prepare.py  qchem.py  utils.py  vasp.py  version.py  wfn.py  wfx.py  xyz.py
iodata/formats/: charmm.py  chgcar.py  cp2k.py  cp2klog.py  cube.py  extxyz.py  fchk.py  fcidump.py  gamess.py  gaussianinput.py  gaussianlog.py  gromacs.py  json.py  json_qcschema.py  locpot.py  mol.py  mol2.py  molden.py  molekel.py  molpro.py  mwfn.py  orca.py  orcalog.py  pdb.py  poscar.py  qchem.py  qchemlog.py  sdf.py  trexio.py  wfn.py  wfx.py  xyz.py
iodata/inputs/: common.py  gaussian.py  orca.py
iodata/test/: __init__.py  common.py  mulliken.py  test_api.py  test_attrutils.py  test_basis.py  test_charmm.py  test_chgcar.py  test_cli.py  test_convert.py  test_cp2k.py  test_cp2klog.py  test_cube.py  test_extxyz.py  test_factorial2.py  test_fchk.py  test_fcidump.py  test_gamess.py  test_gaussian.py  test_gaussianinput.py  test_gaussianlog.py  test_gromacs.py  test_inputs.py  test_iodata.py  test_json.py  test_json_qcschema.py  test_locpot.py  test_log.py  test_mol.py  test_mol2.py  test_molden.py  test_molden_cfour_TOMERGE.py  test_molekel.py  test_molpro.py  test_mwfn.py  test_orbitals.py  test_orca.py  test_orcalog.py  test_overlap.py  test_pdb.py  (+11 more)
iodata/test/cached/: carbon_gs_ae_uncontracted.cp2k.out  carbon_sc_ae_contracted.cp2k.out  ch3_rohf_sto3g_g03.fchk  h_sto3g.fchk  he_p_orbital.wfn  he_s_orbital.wfn  he_spdf_orbital.wfn  hf_sto3g.fchk  nh3_molpro2012.molden  nh3_psi4.molden  water_number.xyz
iodata/test/data/: .water_orca.out.swp  2h-azirine-cc.fchk  CHGCAR.oxygen  CuSCN_molecule.json  CuSCN_molecule_extra.json  CuSCN_molecule_nested_extra.json  FCIDUMP.psi4.h2  H2O_CCSDprTpr_STO3G_output.json  H2O_HF_STO3G_Gaussian_input.json  LOCPOT.oxygen  __init__.py  (+139 more)
test/: __init__.py  common.py  load_fchk_hf_sto3g_num.npy  load_fchk_o2_cc_pvtz_cart_num.npy  mulliken.py  test_chk.py  test_cif.py  test_cp2k.py  test_cube.py  test_gaussian.py  test_internal.py  test_iodata.py  test_lockedh5.py  test_molden.py  test_molecule.py  test_molekel.py  test_molpro.py  test_overlap.npy  test_overlap.py  test_vasp.py  test_wfn.py  test_xyz.py
test/cached/: 2h-azirine-ci.fchk  2h-azirine-mp2.fchk  2h-azirine-mp3.fchk  CHGCAR.water  F.molden  FCIDUMP.molpro.h2  POSCAR.cubicbn_cartesian  POSCAR.cubicbn_direct  POSCAR.water  aelta.cube  atom_si.cp2k.out  carbon_gs_ae_contracted.cp2k.out  carbon_gs_pp_uncontracted.cp2k.out  carbon_sc_pp_contracted.cp2k.out  carbon_sc_pp_uncontracted.cp2k.out  h2_sto3g.mkl  h2o.molden.input  h2o_sto3g.wfn  h2o_sto3g_decontracted.wfn  he2_ghost_psi4_1.0.molden  he_s_virtual.fchk  he_s_virtual.wfn  he_sp_orbital.wfn  he_spdfgh_virtual.wfn  li_sp_orbital.wfn  monosilicic_acid_hf_lan.fchk  neon_turbomole_def2-qzvp.molden  nh3_molden_cart.molden  nh3_molden_pure.molden  nh3_orca.molden  nh3_psi4_1.0.molden  nh3_turbomole.molden  nitrogen-cc.fchk  nitrogen-ci.fchk  nitrogen-mp2.fchk  nitrogen-mp3.fchk  o2_cc_pvtz_pure.fchk  o2_uhf.wfn  psi4_h2_two.npy  water_ccpvdz_pure_hf_g03.fchk  (+2 more)
tools/: gitversion.py  harmonics.py  test_harmonics.py
tools/conda.recipe/: meta.yaml
(+95 files in other folders)
